tests/negative/comptime_statement_return.ora
contract ComptimeStatementReturn {
    pub fn run() -> u256 {
        comptime {
            return 1;
        }
        return 2;
    }
}
